objects/JBP_Strategic_Initiative__c.object
<CustomObject>
    <fields>
        <fullName>Complete__c</fullName>
        <inlineHelpText>Percent complete of total expected result goal.</inlineHelpText>
        <label>% Complete</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Explanation of the strategic initiative. Strategic initiatives are collections of projects and programs that are designed to help the organization achieve its targeted performance.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Date the strategic initiative will end.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Result_Curr__c</fullName>
        <inlineHelpText>Expected revenue for all HP products and services associated to this initiative entered in USD</inlineHelpText>
        <label>Expected Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Result_Goals_Curr_Q1__c</fullName>
        <description>The planned outcome for Q1 for the key metric defined in the Expected Result field.</description>
        <inlineHelpText>The planned outcome for Q1 for the key metric defined in the Expected Result field.</inlineHelpText>
        <label>Expected Result Goals Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Result_Goals_Curr_Q2__c</fullName>
        <description>The planned outcome for Q2 for the key metric defined in the Expected Result field.</description>
        <inlineHelpText>The planned outcome for Q2 for the key metric defined in the Expected Result field.</inlineHelpText>
        <label>Expected Result Goals Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Result_Goals_Curr_Q3__c</fullName>
        <description>The planned outcome for Q3 for the key metric defined in the Expected Result field.</description>
        <inlineHelpText>The planned outcome for Q3 for the key metric defined in the Expected Result field.</inlineHelpText>
        <label>Expected Result Goals Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Result_Goals_Q1__c</fullName>
        <inlineHelpText>The planned outcome for Q1 for the key metric defined in the Expected Result field.</inlineHelpText>
        <label>Expected Result Goals Q1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result_Goals_Q2__c</fullName>
        <inlineHelpText>The planned outcome for Q2 for the key metric defined in the Expected Result field.</inlineHelpText>
        <label>Expected Result Goals Q2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result_Goals_Q3__c</fullName>
        <inlineHelpText>The planned outcome for Q3 for the key metric defined in the Expected Result field.</inlineHelpText>
        <label>Expected Result Goals Q3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <inlineHelpText>Expected outcome of the initiative. One key metric to assess the success of the initiative. Examples: revenue increase, market share gain, margin enhancement, units shipped, # of certifications)</inlineHelpText>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HP_Investment_Curr__c</fullName>
        <inlineHelpText>Total of HP’s monetary contributions for this initiative entered in USD</inlineHelpText>
        <label>HP Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HP_Investment__c</fullName>
        <inlineHelpText>Total of HP’s contributions for this initiative.  Investments can be monetary or non-monetary, for example, $10,000, 10 sales reps, etc.)</inlineHelpText>
        <label>HP Investment</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <inlineHelpText>N/A</inlineHelpText>
        <label>Joint Business Plan</label>
        <referenceTo>JBP__c</referenceTo>
        <relationshipLabel>Strategic Initiatives</relationshipLabel>
        <relationshipName>Strategic_Initiatives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Investment_Curr__c</fullName>
        <inlineHelpText>Total of the partner’s monetary contributions for this initiative entered in USD</inlineHelpText>
        <label>Partner Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Investment__c</fullName>
        <inlineHelpText>Total of the partner’s contributions for this initiative. Investments can be monetary or non-monetary, for example, $10,000, 10 sales reps, etc.</inlineHelpText>
        <label>Partner Investment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_BG_2__c</fullName>
        <inlineHelpText>The name of the HP business group responsible for the plan.</inlineHelpText>
        <label>Business Group</label>
        <picklist>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Date the strategic initiative will start.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_Name_picklist__c</fullName>
        <inlineHelpText>A pre-defined list of strategic initiatives for each business group.</inlineHelpText>
        <label>Initiative Name</label>
        <picklist>
            <controllingField>Plan_BG_2__c</controllingField>
            <picklistValues>
                <fullName>Accelerate acquisitions and new  opportunities in SMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accelerate penetration &amp; attach of PC accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accelerate penetration &amp; attach of services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APP Delivery Mgmt - App Life Cycle (ALM) - Agile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APP Delivery Mgmt - App Life Cycle (ALM) - Incubation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APP Delivery Mgmt - App Life Cycle (ALM) - Mobile / Social Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APP Delivery Mgmt - App Life Cycle (ALM) - Packaged Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APP Delivery Mgmt - App Life Cycle (ALM) - Seeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APP Delivery Mgmt - App Life Cycle (ALM) - Upsell &amp; COE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Participate All - Insight + Mgmt + Gov.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Participate - Capital Markets including: Mid office agreement mgmt, Dodd Frank Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Participate - Governance - Gov.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Participate - Information Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Participate - Productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Participate - Professional Services (Legal, Acctg,PS, CLD, other enterprise)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Participate - Regulated industries: Financial Services, Pharmaceutical / Biotech, Oil and Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Participate - SMB / Riptide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Power - Broadcast Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Power - K2 IDOL Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Power - Knowledge and Expertise Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Power - Security and Survellience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Preserve - Attach to overall Storage deals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Preserve - Expand SaaS into MSP/HP partner channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Preserve - Mobile - Connected ( CNCT) -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Preserve - Provide virtualized backup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Preserve - Support Renewals and Capacity Expansions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Preserve - upsell new functionality (dedup, virtualization) to installed base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Promote CEM - Dynamic Customer Experience Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy - Promote WCM / DAM - Maintain Leadership and Support Renewals Web Content Mgmt</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Strategic Initiative</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SI - {0000}</displayFormat>
        <label>Initiative ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Initiatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Currency_to_USD</fullName>
        <active>true</active>
        <description>All values are should be entered in USD</description>
        <errorConditionFormula>CASE(CurrencyIsoCode, &quot;USD&quot;, 1, 0)= 0</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Enter Currency as USD</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Plan_BG_should_be_same_as_the_JBPs_BG</fullName>
        <active>true</active>
        <errorConditionFormula>IF(((TEXT(Joint_Business_Plan__r.BG__c)&lt;&gt; null) &amp;&amp; (TEXT(Plan_BG_2__c) &lt;&gt;  TEXT(Joint_Business_Plan__r.BG__c))), true, false)</errorConditionFormula>
        <errorDisplayField>Plan_BG_2__c</errorDisplayField>
        <errorMessage>Please make sure the BG of the JBP is the same as the one selected in the picklist</errorMessage>
    </validationRules>
</CustomObject>